--- a/app/scss/layout/_delivery_and_payment.scss
+++ b/app/scss/layout/_delivery_and_payment.scss
@@ -121,7 +121,9 @@
     margin-bottom: 189px;
 }
 
-
+.payment .bid_img {
+    margin-left: 0;
+}
 
 @media (max-width: 1199.9px) {
     .delivery_and_payment {
