--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./layout/for-diller";
 @import "./layout/whoweare";
 @import "./layout/_knowledge-base";
+@import "./layout/_post";
 
 @import "./layout/promotion";
 @import "./layout/goods";
