--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2292,6 +2292,52 @@ main { min-height: 400px; }
   .base-tabs .base-tab-category .base-tabs__info .title { font-size: 12px; line-height: 14px; }
   .base-tabs .base-tab-category .base-tabs__info .descr { font-size: 10px; line-height: 12px; } }
 
+.post-topsect { height: 280px; background-image: url(../image/post/post-pic1.png); background-size: cover; background-position: center center; }
+
+.post-topsect .post-topsect__category { font-weight: 300; font-size: 18px; line-height: 22px; color: #fff; margin-bottom: 7px; }
+
+.post-topsect .post-topsect__title { font-weight: bold; font-size: 36px; line-height: 43px; color: #fff; margin-bottom: 22px; }
+
+.post-topsect .post-topsect__info div { display: inline-block; vertical-align: middle; margin-right: 25px; font-weight: 300; font-size: 18px; line-height: 22px; color: rgba(255, 255, 255, 0.5); }
+
+.post-topsect .post-topsect__info div img { margin-right: 12px; }
+
+.post-content { padding: 40px 0 70px 0; }
+
+.post-box { padding: 39px 65px 6px 65px; margin-bottom: 84px; }
+
+.post-box .post-box__title { font-size: 24px; line-height: 29px; color: #020202; margin-bottom: 20px; }
+
+.post-box p { font-weight: 300; font-size: 18px; line-height: 22px; color: #020202; margin-bottom: 20px; }
+
+.post-box img { max-width: 100%; margin: 5px 0 20px 0; }
+
+.post-box .error-view { height: 60px; background-color: #EDEDED; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: calc(100% + 120px); margin-left: -60px; }
+
+.post-box .error-view p { color: #919191; font-weight: 300; font-size: 18px; line-height: 22px; margin-bottom: 0; }
+
+.post-box .error-view p b { font-weight: 600; }
+
+.base-tabs .base-tab-category.recomendation-posts { margin-bottom: 69px; }
+
+.recomendation-posts .title { font-size: 24px; line-height: 29px; color: #000000; position: relative; margin-bottom: 25px; }
+
+.recomendation-posts .title:after { content: ""; display: block; height: 1px; background-color: #DBDBDB; top: 50%; position: absolute; right: 0; width: calc(100% - 323px); }
+
+.post-sidebar .no-time-to-read { background: #FFFFFF; border: 1px solid #FA4616; box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.08); font-size: 18px; line-height: 22px; color: #FF4700; height: 60px; display: block; text-align: center; padding: 13px 0; margin-bottom: 32px; }
+
+.post-sidebar .no-time-to-read img { margin-right: 16px; }
+
+.promotion { margin-bottom: 30px; }
+
+.promotion .pic-box { height: 200px; }
+
+.promotion .pic-box img { -o-object-fit: cover; object-fit: cover; height: 100%; width: 100%; -o-object-position: 50% 50%; object-position: 50% 50%; }
+
+.promotion .text-box { padding: 16px 20px 24px 20px; background-color: #fff; box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08); }
+
+.promotion .text-box p { font-weight: 300; font-size: 18px; line-height: 22px; color: #000; }
+
 .promotions_cards .cards-dark:not(:first-child) { margin-top: 50px; }
 
 .checkbox_section { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
@@ -2478,6 +2524,8 @@ main { min-height: 400px; }
 .choose_block span { cursor: pointer; }
 
 .delivery_and_payment_main.new { margin-bottom: 189px; }
+
+.payment .bid_img { margin-left: 0; }
 
 @media (max-width: 1199.9px) { .delivery_and_payment h1 { font-size: 98px; margin-bottom: 50px; }
   .delivery_and_payment .details_left::before { right: 80px; }
