--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,6 +14,8 @@
 @import "./layout/whoweare";
 @import "./layout/_knowledge-base";
 @import "./layout/_post";
+@import "./layout/_contacts";
+@import "./layout/_thank-you";
 
 @import "./layout/promotion";
 @import "./layout/goods";
