--- a/app/scss/layout/_knowledge-base.scss
+++ b/app/scss/layout/_knowledge-base.scss
@@ -547,6 +547,8 @@
     display: none;
 }
 
+
+
 @media only screen and (max-width: 1500.8px) {
     .base-topsect {
         background-position: bottom right 13%;
@@ -560,6 +562,8 @@
 }
 
 @media only screen and (max-width: 1199.8px) {
+
+
     .base-table .col-xl-7.col-md-6.col-sm-6 .date-block {
         display: block;
     }
@@ -761,6 +765,19 @@
         -webkit-flex: 0 0 50%;
         flex: 0 0 50%;
         max-width: 50%;
+    }
+
+    .base-topsect {
+        background-position: bottom right 20%;
+        background-size: 400px;
+    }
+
+}
+
+@media only screen and (max-width: 991.8px) {
+    .base-topsect {
+        background-position: bottom right 0;
+        background-size: 400px;
     }
 
 }
