--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2345,6 +2345,8 @@ main { min-height: 400px; }
 
 .post-sidebar .no-time-to-read img { margin-top: -2px; }
 
+.base-tabs .base-tab-category .base-tabs__info .title:after { display: none; }
+
 @media only screen and (max-width: 1199.8px) { .post-topsect .post-topsect__category { margin-bottom: 4px; }
   .post-topsect { height: 204px; }
   .post-topsect .post-topsect__info div { margin-right: 32px; }
